Closed
Bug 320845
Opened 20 years ago
Closed 20 years ago
Clicking Camino icon in dock doesn't open minimized window
Categories
(Camino Graveyard :: General, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Camino1.0
People
(Reporter: krmathis, Assigned: sfraser_bugs)
Details
(Keywords: fixed1.8.0.1, fixed1.8.1, regression)
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a1) Gecko/20051219 Camino/1.0+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a1) Gecko/20051219 Camino/1.0+
A minimized window can no longer be reopened when clicking on the Camino icon in the dock.
This is using my own trunk build (the official nightly build is not out yet, so unable to test it). checkout finish: Mon Dec 19 12:47:14 CET 2005
Working as expected in the 12/18 official nightly trunk build.
Reproducible: Always
Steps to Reproduce:
1. Minimize the only window
2. Click the Camino icon in your Dock
Actual Results:
Camino opens a new fresh window
Expected Results:
Camino open the minimiuzed window
| Reporter | ||
Updated•20 years ago
|
Keywords: regression
Version: unspecified → Trunk
Comment 1•20 years ago
|
||
can we get a bonsai checkin window to track down the culprit?
| Reporter | ||
Comment 2•20 years ago
|
||
(In reply to comment #1)
> can we get a bonsai checkin window to track down the culprit?
>
This should be about right.
Checkins to directory /mozilla/camino between 2005-12-18 03:00 and 2005-12-19 03:45 : http://tinyurl.com/dvalz
Comment 3•20 years ago
|
||
ah, looks like a regression from the getFrontmostBrowserWindow changes. This would then probably also be on the branch.
-> smfr
Assignee: mikepinkerton → sfraser_bugs
Status: UNCONFIRMED → NEW
Ever confirmed: true
Target Milestone: --- → Camino1.0
I see comment 0 on the branch, too.
Version: Trunk → unspecified
| Assignee | ||
Comment 5•20 years ago
|
||
Fixed by allowing miniaturized windows to be returned by -getFrontmostBrowserWindow, and included in -browserWindows.
Checked in 1.8 branch and trunk, but not 1.8.0 yet.
| Assignee | ||
Updated•20 years ago
|
Summary: Clicking Camino icon in dock dont open minimized window → Clicking Camino icon in dock doesn't open minimized window
Comment 6•20 years ago
|
||
Simon, did you land this on the 1.8.0 branch yet?
| Assignee | ||
Comment 7•20 years ago
|
||
Yeah, i think it went over with the merge.
Comment 9•20 years ago
|
||
Verified on the branch using Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.0.1) Gecko/20060111 Firefox/1.5.0.1.
Keywords: fixed1.8.0.1 → verified1.8.0.1
Comment 10•20 years ago
|
||
(In reply to comment #9)
> Verified on the branch using Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O;
> en-US; rv:1.8.0.1) Gecko/20060111 Firefox/1.5.0.1.
>
Marcia, please verify with a Camino build.
Keywords: verified1.8.0.1 → fixed1.8.0.1
Updated•20 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•