Fix bug 320845: when a window is miniaturized in the dock, clicking on the app icon should bring it back. Fixed by allowing miniaturized windows to be returned by -getFrontmostBrowserWindow, and included in -browserWindows.